commiting everything before ui is fixed

--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,7 @@
     <title>
 
       {% block title %}
-        Stack the Future 2026
+        Stack the Future 2026 
       {% endblock title %}
 
     </title>
@@ -34,6 +34,10 @@
 
   </head>
   <body>
+    <h1 style="position:fixed; top:20px; left:20px; z-index:9999; color:red;">
+  BASE TEMPLATE LOADED
+</h1>
+
     <div class="w-100 h-100 overflow-auto d-flex flex-column justify-content-between">
       <div class="container">
 
