Schrodinger Sketcher added!

--- a/templates/base.html
+++ b/templates/base.html
@@ -47,7 +47,9 @@
       </div>
     </div>
 
-    <!-- Floating Chatbot (REQUIRED by chatbot.js) -->
+    <iframe data-sketcher src="{{ url_for('static', filename='sketcher/wasm_shell.html') }}" style="height: 500px; width: 500px;"></iframe>
+
+    <!-- Pull Up Chatbot assistant -->
     <div id="chatbot" class="chatbot-wrapper collapsed">
 
       <div class="chatbot-header">
