--- a/templates/base.html
+++ b/templates/base.html
@@ -44,6 +44,21 @@
             (SMILES is currently hardcoded in the backend.)
           </p>
         </div>
+    
+      </div>
+      <div class="toxicity-map-card mt-5 p-4 bg-white rounded shadow-sm">
+        <h2>Toxicity Predictor & Similarity Map</h2>
+        <p>Enter a SMILES string to see the toxicity probability and atom-level contributions.</p>
+        
+        <input type="text" id="smiles-input" placeholder="e.g., c1ccccc1CC(=O)O" value="c1ccccc1">
+        <button onclick="getPrediction()">Generate Map</button>
+
+        <p class="loading" id="loader">Processing molecule...</p>
+
+        <div id="result">
+            <h3>Toxicity Probability: <span id="prob-value">0</span></h3>
+            <img id="map-image" src="" alt="Similarity Map">
+        </div>
       </div>
     </div>
 
@@ -80,6 +95,6 @@
 
     
     <script src="{{ url_for('static', filename='js/chatbot.js') }}"></script>
-
+    <script src="{{ url_for('static', filename='js/toxicity_map.js') }}"></script>
   </body>
 </html>
