--- a/templates/base.html
+++ b/templates/base.html
@@ -45,9 +45,8 @@
     
       </div>
       <div class="toxicity-map-card mt-5 p-4 bg-white rounded shadow-sm">
-        <h2>Toxicity Predictor & Similarity Map</h2>
-        <p>Enter a SMILES string to see the toxicity probability and atom-level contributions.</p>
-        
+        <h2>Toxicity Predictor Map</h2>
+        <p>Click Generate Map to see the toxicity prediction of the molecule. Highlighted in purple atoms shows areas prone to causing toxicity, green areas represent strong bonds.</p>
         <button onclick="getPrediction()">Generate Map</button>
 
         <p class="loading" id="loader">Processing molecule...</p>
