reason why iframe cannot be found

--- a/templates/base.html
+++ b/templates/base.html
@@ -63,6 +63,7 @@
       <iframe
         src="{{ url_for('static', filename='sketcher/wasm_shell.html') }}"
         class="sketcher-iframe"
+        data-sketcher
       ></iframe>
     </div>
   </div>
