Fixed Toxicity Name

--- a/templates/base.html
+++ b/templates/base.html
@@ -54,7 +54,7 @@
 
   <div class="right-pane">
     <div class="toxicity-map-card">
-        <h2>Toxicity Predictor Map</h2>
+        <h2>Toxicity Predictor</h2>
         <p>Click Generate Map to see the toxicity prediction of the molecule. </p>
         <button onclick="getPrediction()">Generate Map</button>
         <p class="loading" id="loader">Processing molecule...</p>
